--- a/.hgignore
+++ b/.hgignore
@@ -9,3 +9,19 @@ syntax: regexp
 
 syntax: regexp
 ^test_data/test_output$
+syntax: regexp
+^test_data/test_blank_dbf$
+syntax: regexp
+^test_data/test_blank_input$
+syntax: regexp
+^test_data/test_blank_output$
+syntax: regexp
+^\.hgignore$
+syntax: regexp
+^\.hgignore$
+syntax: regexp
+^carbon_output/test_real_output_hwp\.tif$
+syntax: regexp
+^carbon_output_map$
+syntax: regexp
+^uncertainty_sequestration\.tif$
