Are we tracking .hgignore?  I'm ignoring .hgignore, then I'm going to stop tracking it.

--- a/.hgignore
+++ b/.hgignore
@@ -25,3 +25,7 @@ syntax: regexp
 ^carbon_output_map$
 syntax: regexp
 ^uncertainty_sequestration\.tif$
+syntax: regexp
+^\.settings$
+syntax: regexp
+^\.hgignore$
